k8-manifests/qa/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodejs-app
  namespace: qa
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nodejs-app
  template:
    metadata:
      labels:
        app: nodejs-app
    spec:
      imagePullSecrets:
      - name: regcred
      containers:
      - name: nodejs-app
        image: kaustubhdhabarde/nodejs-app:844af49e1859be7a19111c3469a0f898331f31ec
        ports:
        - containerPort: 5000
